package ucf.assignments;

/*
 *  UCF COP3330 Summer 2021 Assignment 4 List Maker New List
 *  Copyright 2021 Ivedent Lloyd III
 */

public class NewListMaker {
    // opens the file
    // prompts the user to input a title for a new list
    // prompts the user for the item in the list
    // prompts for the description of the item
    // prompts the user for the due date of the item
    // allows the user to add another item to the list
    // allows user to break at make a new list or return to the first window
    // writes the new list and other data to the file
    // closes file
}
