@startuml
'https://plantuml.com/class-diagram

class ListMakerApp {
    +main()
    +start()
}

class ListMakerController {
    +createNewListClicked()
    +editListClicked()
    +autoGenerateListClicked()
}

class NewListMaker {
    -newListUserInputs()
    -returnToListMaker()
}

class ListMakerEditor {
    -deleteListClicked()
    -editListClicked()
    -returnToListMaker()
    -displaySelectedList()
    -displayListCompletedItems()
    -displayListIncompletedItems()
}

ListMakerController - ListMakerEditor
ListMakerController -- NewListMaker
ListMakerApp - ListMakerController
javafx.Application <|-- ListMakerApp

@enduml